sass/_panels.sass
// panels - the option menus

// structural support changes
.chrome .header-bar
  font-size: 13px
  line-height: 42px

.chrome .header-bar .header-room
  display: block
  padding: 0 0 0 75px

.chrome .header-bar .header-room > div
  margin: -2px 10px 0 0 !important
  position: initial !important
  vertical-align: top !important
  display: inline-block !important

// the panels
%panel-button 
  border: none
  outline: none
  font-size: 0.9em
  font-weight: bold
  padding: 5px 10px
  border-radius: 5px
  @extend %button

#tsWindow.active,
.header-bar:hover #tsHotBar
  display: flex

.hb-qtbtn1 #qtbtn1,
.hb-qtbtn2 #qtbtn2,
.hb-qtbtn3 #qtbtn3,
.hb-shared #hbShare,
.hb-is_afk #hbIsAfk,
.hb-auto_b #hbAutoB,
.hb-auto_q #hbAutoQ,
.hb-nextdj #hbNextDJ,
.hb-people #hbPeople,
.hb-player #hbPlayer,
.hb-bubble #hbBubbles
  @extend %hidden

#tsHotBar
  display: none
  flex-wrap: wrap
  margin: 0 auto
  padding: 10px 20px
  line-height: 1em
  max-width: 960px
  @extend %basic

  .ts-button,
  .ts-toggle
    margin-right: 5px
    @extend %panel-button

  .ts-button
    font-size: 1em
    padding-top: 2px

  .ts-toggle span
    width: 12px
    font-size: 12px

#tsWindow
  display: none
  z-index: 1000
  align-items: center
  justify-content: center
  background: rgba(0, 0, 0, 0.75)
  @include abs(0, 0, 0, 0)
  *
    box-sizing: border-box

#tsClose
  margin-right: 10px
  cursor: pointer

#tsConfig
  width: 100%
  overflow-y: auto
  max-width: 500px
  border-radius: 10px
  padding: 60px 20px 20px
  position: relative
  @extend %basic
  @include box(80%)

  nav
    width: 90%
    z-index: 1001
    max-width: 480px
    position: fixed
    padding: 10px 20px
    margin: -60px -20px 0
    border-radius: 10px
    @extend %basic

  kbd
    margin-top: 2px
    padding: 2px 5px
    display: inline-block
    background: $bg-faded
    border: 1px solid $bg-hover

  h3
    opacity: 0.5
    font-size: 11px
    font-weight: bold
    letter-spacing: 0.5em
    text-transform: uppercase
    margin: 15px 0 10px

  h5
    margin: 5px 0
    font-size: 15px
    font-weight: bold
    padding: 0

  p
    margin: 2px 0 15px 
    @extend %faded

  h5 + p 
    margin-top: -2px

  a
    color: $main
    text-decoration: none
    &.ts-button
      display: inline-block
      margin: 0 3px 3px 0

  .ts-toggle
    margin-top: 2px
    display: block
    cursor: pointer
    font-weight: bold
  h5 .ts-toggle
    margin: 0
    font-size: 15px
  h5 .ts-toggle span
    width: 15px
    font-size: 15px

  .ts-choice,
  .ts-inputs,
  .ts-button
    @extend %panel-button

  input[type="file"]
    display: none

  textarea
    width: 100%
    margin-bottom: 5px

.ts-tab
  cursor: pointer
  font-size: 12px
  font-weight: bold
  margin: 7px 5px 0 0
  display: inline-block
  text-transform: uppercase
  border-bottom: 2px solid
  @extend %faded
  &.active
    color: $main
  &.active, &:hover
    opacity: 1 !important

.ts-tabbed:not(.active)
  display: none

.ts-about .ts-toggle
  margin-bottom: 5px

.ts-toggle
  span
    min-width: 12px
    display: inline-block
  input
    display: none
  input:checked + span:after
    color: $main
    content: $toggle-on
  input:not(:checked) + span:after
    content: $toggle-off
    @extend %faded

